auth/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
    name: auth
spec:
    replicas: 2
    template:
        metadata:
            labels:
                app: auth
                tier: backend
        spec:
            containers:
            - name: auth
              image: auth
              imagePullPolicy: IfNotPresent
              readinessProbe:
                httpGet:
                  path: /monitor/readiness
                  port: 8080
                initialDelaySeconds: 5
              resources:
                  requests:
                      cpu: 100m
                      memory: 100Mi
