auth/postgresd-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ./docker-compose.yml convert
    kompose.version: 1.6.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: postgresd
  name: postgresd
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: postgresd
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: hydra
        - name: POSTGRES_PASSWORD
          value: secret
        - name: POSTGRES_USER
          value: hydra
        image: postgres:9.6
        name: postgresd
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
status: {}
