auth/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: auth
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
    name: auth
    labels:
      app: auth
spec:
    replicas: 1
    template:
        metadata:
          labels:
            app: auth
        spec:
            containers:
            - name: auth
              image: auth
              command:
              - app
              - host
              imagePullPolicy: IfNotPresent
              readinessProbe:
                httpGet:
                  path: /monitor/readiness
                  port: 8080
                initialDelaySeconds: 5
