auth/consent.yaml
apiVersion: v1
kind: Service
metadata:
  name: consent
  labels:
    name: consent
spec:
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: consent
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: consent
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: consent
    spec:
      containers:
      - name: consent
        image: oryd/hydra-idp-react:latest
        ports:
        - containerPort: 3000

      volumes:
      - name: hydra-volume
        configMap:
          name: hydra
      - name: client-data
        secret:
          secretName: hydra
