auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
    tier: backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: auth
    tier: backend
