auth/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: hydra
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: consent
          servicePort: 3000
  - http:
      paths:
      - path: /hydra/
        backend:
          serviceName: hydra
          servicePort: 4444
